--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>weather-app</title>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
    
-    <div id="input">
-        <h1 id="head">WEATHER-APP</h1>
+      <nav>Weather app</nav>
 
-        <h2>ENTER NAME OF CITY</h2>
-
+        <div id="inputs">
         <input type="text" id="city" value="paris">
         <button type="submit" onclick="submitContent()">Submit</button>
-    </div>
+        </div>
 
     <div id="result">
     </div>
