--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>weather-app</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="bootstrap/dist/css/bootstrap.min.css" >
 </head>
 <body>
    
@@ -14,7 +10,7 @@
 
         <div id="inputs">
         <input type="text" id="city" value="paris">
-        <button type="submit" onclick="submitContent()">Submit</button>
+        <button class="btn btn-primary" type="submit" onclick="submitContent()">Submit</button>
     </div>
 
     <div id="result">
